--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
     color:var(--colorclaro);
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
+    font-size: 200;
 }
 
 a{
