--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     background:var(--segundocolor);
     color:var(--colorclaro);
     font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
+    font-weight: 400px;
 }
 
 a{
@@ -82,7 +82,7 @@ header{
 
 
 h1, h2, h3, h4, h5, h6, strong{
-    font-weight: 800;
+    font-weight: 800px;
 }
 
 /* ----------------------------------------- IMPORTANTE -----------------------------------------
