--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ Lo primero es definir tres colores, los que deberían coincidir con los utilizad
 ------------------------------------------------------------------------------------------------- */
 
 :root {
-  --primercolor: #666; 
-  --segundocolor: #ffffff; /* menos luminoso */
-  --tercercolor: #aaa; /* más luminoso */
-  --colorclaro: rgba(60,131,120,0.8);
-  --coloroscuro: rgba(0,0,0,0.8);
+  --primercolor: #7872ad; 
+  --segundocolor: #24806f; /* menos luminoso */
+  --tercercolor: #f9a347; /* más luminoso */
+  --colorclaro: rgba(120,114,173,0.8);
+  --coloroscuro: rgba(60,131,120,0.8);
 }
 
 /* ----------------------------------------- IMPORTANTE -----------------------------------------
