--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ Lo primero es definir tres colores, los que deberían coincidir con los utilizad
 
 :root {
   --primercolor: #7872ad; 
-  --segundocolor: #24806f; /* menos luminoso */
+  --segundocolor: #ffffff; /* menos luminoso */
   --tercercolor: #f9a347; /* más luminoso */
-  --colorclaro: rgba(60,131,120,0.8);
+  --colorclaro: rgba(36,128,111,0.8);
   --coloroscuro: rgba(120,114,173,0.8);
 }
 
