--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ Lo primero es definir tres colores, los que deberían coincidir con los utilizad
 
 :root {
   --primercolor: #ffffff; 
-  --segundocolor: #ffffff; /* menos luminoso */
-  --tercercolor: #f9a347; /* más luminoso */
+  --segundocolor: #f9a347; /* menos luminoso */
+  --tercercolor: #7872ad; /* más luminoso */
   --colorclaro: rgba(36,128,111,0.8);
   --coloroscuro: rgba(120,114,173,0.8);
 }
