--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ Otra cosa que deberías rescatar de tu fanzine son las tipografías, usando http
 
 body{
     background:var(--coloroscuro);
-    color:var(--coloroscuro);
+    color:var(--colorclaro);
     font-family: 'Montserrat', sans-serif;
     font-weight: 400px;
 }
@@ -65,7 +65,7 @@ header{
     background-position: center top;
     background-repeat: no-repeat;
     background-size:100% auto;
-    color:var(--coloroclaro);
+    color:var(--segundocolor);
 }
 
 @media (min-width: 576px) { 
