--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Lo primero es definir tres colores, los que deberían coincidir con los utilizad
 :root {
   --primercolor: #8784d1; 
   --segundocolor: #f7ad48; /* menos luminoso */
-  --tercercolor: #265652; /* más luminoso */
+  --tercercolor: #3C8378; /* más luminoso */
   --colorclaro: rgba(255,255,255,0.8);
   --coloroscuro: rgba(34,99,89,0.8);
 }
@@ -60,12 +60,12 @@ De tal manera podría "fundirse" con el color de fondo, ofreciendo continuidad, 
 ------------------------------------------------------------------------------------------------- */
 
 header{
-    background-color:var(--coloroscuro);
-    background-image:url('img/wireframe-aspect_ratio-1-1.png');
+    background-color:var(--tercercolor);
+    background-image:url('img/Header_1-1.png');
     background-position: center top;
     background-repeat: no-repeat;
     background-size:100% auto;
-    color:var(--segundocolor);
+    color:var(--primercolor);
 }
 
 @media (min-width: 576px) { 
