--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ Con tales colores, la imagen sirve de transición a la parte que ofrece más inf
 
 main{
     background-image:url('img/Imagen-fondo 2.png');
-    background-position: center bottom;
+    background-position: left bottom;
     background-repeat: repeat-x;
     background-size:100% auto;
 }
