--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header{
 }
 
 @media (min-width: 992px) { 
-    header{background-image:url('img/Header_2.75-1.png');}
+    header{background-image:url('img/Header_2.75-1_FINAL copy.png');}
 }
 
 
